# forge-ide

./: .gitignore  BUILDING_MACOS.md  CODESIGNING_GUIDE.md  COMPLEX_QUERIES.md  Cargo.toml  GIT_TOOL.md  LANGFUSE_CHECKLIST.md  LANGFUSE_FIX.md  LANGFUSE_GUIDE.md  LANGFUSE_INTEGRATION.md  MAKE_AI_QUERY.md  OBSERVABILITY.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README_LANGFUSE.md  SDK_MANAGER_GUIDE.md  TESTING_LANGFUSE.md  TEST_RESULTS.md  analyze_trace.py  launch_with_langfuse.sh  monitor_activity.sh  setup_langfuse.sh  start_with_langfuse.sh  test_actual_queries.py  test_complex_queries.py  test_full_database.py  test_langfuse.py  test_langfuse.sh  test_langfuse_simple.py  test_nl_query.py  test_prompt_generation.py  test_realistic_queries.py  test_run_configs.md  test_tool.py  watch_langfuse.sh
defaults/: dark-theme.toml  icon-theme.toml  settings.toml
docs/: architecture.md
extra/: proxy.ps1
forge-agent/: Cargo.toml
forge-agent/src/: bridge.rs  bridge_standalone.rs  context_cache.rs  edit_fixer.rs  forge_agent.rs  forge_search.rs  langfuse_hook.rs  langfuse_util.rs  lib.rs  llm_client.rs  loop_detection.rs  output_masking.rs  project_memory.rs  rig_tools.rs  setup.rs  tracing_hook.rs
forge-agent/src/api/: mod.rs  streaming.rs
forge-agent/src/repomap/: mod.rs
forge-agent/src/tools/: code.rs  display.rs  execute.rs  files.rs  git.rs  lsp.rs  mod.rs  process.rs  run_config.rs  sdk_manager.rs  search.rs  treesitter.rs  web.rs
forge-agent/tests/: bench_agent.rs  test_mpatch.rs
forge-intellij/: .gitignore  PERFORMANCE_OPTIMIZATION.md  PROMPT_OPTIMIZATION.md  README.md  TOOL_API_USAGE.md  TOOL_RESULT_FORMAT.md  UI_CHANGES.md  build.gradle.kts  settings.gradle.kts
forge-intellij/docs/: GEMINI_FIX_SUMMARY.md
forge-intellij/scripts/: agent_analysis_final.py  analyze_agent.py  analyze_agent_detailed.py  analyze_latest_trace.py  measure_latency.py  test_agent_fixed.py  test_backend_tools.py  test_exact_prompt.py  test_full_gemini.py  test_gemini_tools.py  test_graph_stream.py  test_langchain.py  test_litellm.py  test_litellm2.py  test_prompt_theory.py  test_real_latency.py  test_sse_events.py
lapce-app/: Cargo.toml
lapce-app/src/: about.rs  ai_chat.rs  ai_completion.rs  ai_diff.rs  alert.rs  app.rs  audio_recorder.rs  (+19 more)
lapce-core/: Cargo.toml  build.rs
lapce-proxy/: Cargo.toml
lapce-rpc/: Cargo.toml
scripts/: check-codesign.sh  package-macos.sh
(+65 files in other folders)
