[package]
name = "forge-agent"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "AI coding agent for forge-ide"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "fs"] }
futures = "0.3"

# Schema generation for tool definitions
schemars = "0.8"

# HTTP (still needed for web tools, context7 fetching)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# JWT token decoding (for forge-search auth)
base64 = "0.22"

# File walking
walkdir = "2"
ignore = "0.4"

# Code parsing -- tree-sitter for accurate symbol extraction in RepoMap
# Pinned to 0.22/0.21 to match lapce-core's tree-sitter version (avoids `links` conflict)
# NOTE: tree-sitter-javascript 0.21 is excluded due to `cc ~1.0.90` constraint conflict;
# JS/JSX files use tree-sitter-typescript's TSX parser instead (TS is a JS superset).
tree-sitter = "0.22"
tree-sitter-tags = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"

# Database (session persistence + embeddings)
rusqlite = { version = "0.32", features = ["bundled"] }

# Caching (moka - high-performance concurrent cache)
moka = { version = "0.12", features = ["sync"] }

## glob crate was considered for ReadManyFiles but WalkDir + manual matching
## is used instead for consistency with the existing glob_search tool

# Utils
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "5"
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
regex = { workspace = true }
similar = "2"
shellexpand = "3"
urlencoding = "2"
petgraph = "0.6"


# IDE integration - communicate with proxy
lapce-rpc = { workspace = true }
crossbeam-channel = { workspace = true }

# CLI harness dependencies
clap = { workspace = true }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"

[dev-dependencies]
tempfile = "3"

[features]
default = []

[[bin]]
name = "forge-cli"
path = "src/bin/forge_cli.rs"
